--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "flatted": "^3.3.3",
     "framer-motion": "^12.6.2",
+    "immer": "^11.1.4",
     "lodash": "^4.17.21",
     "rc-slider": "^11.1.8",
     "react": "^19.0.0",
@@ -34,7 +35,8 @@
     "split.js": "^1.6.5",
     "tone": "^15.0.4",
     "use-history": "^1.4.1",
-    "use-undo": "^1.1.1"
+    "use-undo": "^1.1.1",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
